examples/test/testpolicy13163.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13163
  namespace: namespace49
spec:
  podSelector:
    matchLabels:
      key35: value21
      key19: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value29
          key44: value22
          key38: value9
      podSelector:
        matchLabels:
          key10: value35
